fix icon size and alignment in textfield label

--- a/src/elements/TextField/_textfield.scss
+++ b/src/elements/TextField/_textfield.scss
@@ -56,3 +56,10 @@ textarea.mdl-textfield__input {
         }
     }
 }
+
+.mdl-textfield__label {
+    .material-icons {
+        font-size: 1.25em;
+        vertical-align: text-bottom;
+    }
+}
